Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/Dependent_Picklist_Set__c.object-meta.xml
<CustomObject>
    <description>Defines a single combination of values available for a generic multi-level picklist.</description>
    <label>Dependent Picklist Set</label>
    <nameField>
        <displayFormat>DPS-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependent Picklist Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>