Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Action_Body__c.field-meta.xml
<CustomField>
    <fullName>Action_Body__c</fullName>
    <description>The body content of the associated action (if any) to associate with this picklist combination.</description>
    <inlineHelpText>The body content of the associated action (if any) to associate with this picklist combination.</inlineHelpText>
    <label>Action Body</label>
    <length>25000</length>
    <type>Html</type>
</CustomField>