Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Action_Body_Hashcode__c.field-meta.xml
<CustomField>
    <fullName>Action_Body_Hashcode__c</fullName>
    <description>The hash code of the action body.  Used to avoid query limitations that come with text fields over 255 characters.  This field is text formatted as number fields cannot be grouped either.</description>
    <inlineHelpText>The hash code of the action body.  Used to avoid query limitations that come with text fields over 255 characters.  This field is text formatted as number fields cannot be grouped either.</inlineHelpText>
    <label>Action Body Hashcode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>