Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Action_Label__c</fullName>
    <description>The label of the associated action (if any) to associate with this picklist combination.</description>
    <inlineHelpText>The label of the associated action (if any) to associate with this picklist combination.</inlineHelpText>
    <label>Action Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>