Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>The type of action to execute should this combination be chosen.</description>
    <inlineHelpText>The type of action to execute should this combination be chosen.</inlineHelpText>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Popup</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>