Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Field_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_1_Description__c</fullName>
    <description>Optional descriptive text for field 1.</description>
    <inlineHelpText>Optional descriptive text for field 1.</inlineHelpText>
    <label>Field 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>