Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Field_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_2_Description__c</fullName>
    <description>Optional descriptive text for field 2.</description>
    <inlineHelpText>Optional descriptive text for field 2.</inlineHelpText>
    <label>Field 2 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>