Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Field_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_3_Description__c</fullName>
    <description>Optional descriptive text for field 3.</description>
    <inlineHelpText>Optional descriptive text for field 3.</inlineHelpText>
    <label>Field 3 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>