Salesforce/force-app/main/default/objects/Dependent_Picklist_Set__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Licence Tool - Baseline</fullName>
            </value>
            <value>
                <fullName>Licence Tool - Licensee</fullName>
            </value>
            <value>
                <fullName>Licence Tool - Non Licensee</fullName>
            </value>
            <value>
                <fullName>Notifiable Works Interactive Guide - Baseline</fullName>
                <label>Notifiable Works Interactive Tool - Baseline</label>
            </value>
            <value>
                <fullName>Notifiable Works Interactive Guide - Descriptive</fullName>
                <label>Notifiable Works Interactive Tool - Reference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>